[gd_scene load_steps=7 format=3 uid="uid://qcwkqeramlgf"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_lrecg"]
[ext_resource type="PackedScene" uid="uid://dwcb5pkt11a3u" path="res://objects/bulllet.tscn" id="2_6xgwt"]
[ext_resource type="Texture2D" uid="uid://c2i1x2xpa2bf7" path="res://images/bohatyr.png" id="3_f8tbg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s20k4"]
size = Vector2(41, 79)

[sub_resource type="SpriteFrames" id="SpriteFrames_jvddh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_f8tbg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0yiq"]
size = Vector2(46, 81.5)

[node name="player" type="CharacterBody2D"]
position = Vector2(2, 29)
collision_layer = 3
script = ExtResource("1_lrecg")
bullet = ExtResource("2_6xgwt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -36.5)
shape = SubResource("RectangleShape2D_s20k4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -36)
scale = Vector2(1, 1.25)
sprite_frames = SubResource("SpriteFrames_jvddh")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, -36)
shape = SubResource("RectangleShape2D_m0yiq")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-3, -29)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Node2D" type="Node2D" parent="."]

[node name="bullet_spawn" type="Marker2D" parent="Node2D"]
position = Vector2(35, -35)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
